[Issue 4314] [Issue 4315] CUFs won't overlap on all browsers (Firefox...)

--- a/tm/tm.web/src/main/webapp/styles/structure.css
+++ b/tm/tm.web/src/main/webapp/styles/structure.css
@@ -49,6 +49,7 @@ label {
 
 label:after {
 	content: "\0000a0: ";
+	float: none;
 }
 
 label.afterDisabled:after, input + label:after {
